Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
pulseaudio
pulseaudio
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 786
    • Issues 786
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 57
    • Merge Requests 57
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • PulseAudio
  • pulseaudiopulseaudio
  • Issues
  • #988

Closed
Open
Opened Sep 19, 2020 by yuri@FreeBSD@yurivict

Loses information about error codes because pa_assert doesn't report them

Assertion 'pthread_mutex_unlock(&m->mutex) == 0' failed at pulsecore/mutex-posix.c:108, function pa_mutex_unlock(). Aborting.
ExceptionHandler::SendContinueSignalToChild sys_write failed:Broken pipe
ExceptionHandler::GenerateDump waitpid failed:No child processes
ExceptionHandler::WaitForContinueSignal sys_read failed:Bad file descriptor
Abort trap

pa_assert loses the info about the error code that pthread_mutex_unlock failed with. Most likely it is EINVAL, but other situations are also possible.

For debuggability please always report error codes for all system functions.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: pulseaudio/pulseaudio#988